# st-multimodal-chatinput-revised-ui

./: .gitignore  README.md  example.py  pyproject.toml  setup.py
st_multimodal_chatinput_revised_ui/: __init__.py
st_multimodal_chatinput_revised_ui/frontend/: package-lock.json
st_multimodal_chatinput_revised_ui/frontend/src/: MultimodalChatInput.tsx  styles.css
