[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "st_multimodal_chatinput_revised_ui"
version = "0.1.0"
description = "Streamlit component that allows you to accept multi-modal inputs through a chat interface."
authors = ["FloData Analytics"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/flodata-analytics/st-multimodal-chatinput-revised-ui"
repository = "https://github.com/flodata-analytics/st-multimodal-chatinput-revised-ui"
documentation = "https://github.com/flodata-analytics/st-multimodal-chatinput-revised-ui"
classifiers = []

[build]
builder = "pypa/manylinux2014_x86_64"
